# libdatachannel

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  BUILDING.md  CMakeLists.txt  CMakeSettings.json  CNAME  CONTRIBUTING.md  DOC.md  Jamfile  Makefile  README.md  archives.html  categories.html  index.html  tags.html  vcpkg.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build-gnutls.yml  build-mbedtls.yml  build-nice.yml  build-nomedia.yml  build-nowebsocket.yml  build-openssl.yml  build.yml  check-version.yml  release.yml
cmake/: LibDataChannelConfig.cmake  LibDataChannelConfig.cmake.in  libdatachannel-config.cmake.in  version.h.in
cmake/Modules/: FindGLIB.cmake  FindLibJuice.cmake  FindLibNice.cmake  FindMbedTLS.cmake  FindNettle.cmake  FindSRTP.cmake  FindUsrsctp.cmake  FindlibSRTP.cmake  Findplog.cmake
examples/: README.md
examples/client/: CMakeLists.txt  README-getopt-for-windows.md  cli-change.txt  getopt.c  getopt.cpp  getopt.h  main.cpp  offerer.cpp  parse_cl.cpp  parse_cl.h
examples/client-benchmark/: CMakeLists.txt  README.md  main.cpp  parse_cl.cpp  parse_cl.h
examples/client/uwp/: package.appxManifest
examples/copy-paste/: CMakeLists.txt  README.md  answerer.cpp  offerer.cpp
examples/copy-paste-capi/: CMakeLists.txt  answerer.c  getline.h  offerer.c
examples/copy-paste-capi/uwp/answerer/: package.appxManifest
examples/copy-paste-capi/uwp/offerer/: package.appxManifest
examples/copy-paste/uwp/answerer/: package.appxManifest
examples/copy-paste/uwp/offerer/: package.appxManifest
examples/media/: CMakeLists.txt  README.md  main.cpp  main.html
examples/media-receiver/: CMakeLists.txt  README.md  main.cpp  main.html
examples/media-sender/: CMakeLists.txt  README.md  main.cpp  main.html
examples/media-sender/uwp/: package.appxManifest
examples/media-sfu/: CMakeLists.txt  main.cpp  main.html
examples/media-sfu/uwp/: package.appxManifest
examples/sfu-media/: CMakeLists.txt  main.cpp  main.html
examples/signaling-server-cpp-libdatachannel-ws/: signaling-server.cpp
examples/signaling-server-libdatachannel-ws/: CMakeLists.txt  signaling-server.cpp
examples/signaling-server-libdatachannel-ws-capi/: CMakeLists.txt  signaling-server.c
examples/signaling-server-libdatachannel-ws/uwp/: package.appxManifest
examples/signaling-server-rust/: Cargo.toml
examples/signaling-server-rust/src/: main.rs
examples/streamer/: ArgParser.cpp  ArgParser.hpp  CMakeLists.txt  README.md  client.js  dispatchqueue.cpp  dispatchqueue.hpp  fileparser.cpp  fileparser.hpp  h264fileparser.cpp  h264fileparser.hpp  helpers.cpp  helpers.hpp  index.html  main.cpp  opusfileparser.cpp  opusfileparser.hpp  stream.cpp  stream.hpp
examples/streamer/samples/: generate_h264.py  generate_opus.py
examples/streamer/samples/h264/: sample-0.h264  sample-1.h264  sample-10.h264  sample-100.h264  sample-101.h264  sample-102.h264  sample-103.h264  sample-104.h264  sample-105.h264  sample-106.h264  sample-107.h264  sample-108.h264  sample-109.h264  sample-11.h264  sample-110.h264  sample-111.h264  sample-112.h264  sample-113.h264  sample-114.h264  sample-115.h264  sample-116.h264  sample-117.h264  sample-118.h264  sample-119.h264  sample-12.h264  sample-120.h264  sample-121.h264  sample-122.h264  sample-123.h264  sample-124.h264  sample-125.h264  sample-126.h264  sample-127.h264  sample-128.h264  sample-129.h264  sample-13.h264  sample-130.h264  sample-131.h264  sample-132.h264  sample-133.h264  (+860 more)
examples/streamer/samples/opus/: sample-0.opus  sample-1.opus  sample-10.opus  sample-100.opus  sample-1000.opus  sample-1001.opus  sample-1002.opus  sample-1003.opus  sample-1004.opus  sample-1005.opus  sample-1006.opus  sample-1007.opus  sample-1008.opus  sample-1009.opus  sample-101.opus  sample-1010.opus  sample-1011.opus  sample-1012.opus  sample-1013.opus  sample-1014.opus  sample-1015.opus  sample-1016.opus  sample-1017.opus  sample-1018.opus  sample-1019.opus  sample-102.opus  sample-1020.opus  sample-1021.opus  sample-1022.opus  sample-1023.opus  sample-1024.opus  sample-1025.opus  sample-1026.opus  sample-1027.opus  sample-1028.opus  sample-1029.opus  sample-103.opus  sample-1030.opus  sample-1031.opus  sample-1032.opus  (+1460 more)
examples/streamer/uwp/: package.appxManifest
examples/videocall/: CMakeLists.txt  app.py  helpers.cpp  helpers.hpp  index.html  main.cpp  webrtc-client.js
examples/videocall/static/: webrtc-client.js
examples/videocall/templates/: index.html
examples/whip-whep/: CMakeLists.txt  README.md  index.html  stream.sdp  whep.cpp  whip.cpp
feeds/: all.atom.xml
pages/: Makefile  pelicanconf.py  publishconf.py  reference.html  tasks.py
src/: aacrtppacketizer.cpp  apphandler.cpp  av1packetizationhandler.cpp  av1rtpdepacketizer.cpp  av1rtppacketizer.cpp  base64.cpp  base64.hpp  candidate.cpp  candidate.hpp  capi.cpp  certificate.cpp  certificate.hpp  chaininterop.cpp  channel.cpp  configuration.cpp  datachannel.cpp  datachannel.hpp  dependencydescriptor.cpp  description.cpp  description.hpp  dtlssrtptransport.cpp  dtlssrtptransport.hpp  dtlstransport.cpp  dtlstransport.hpp  global.cpp  globals.hpp  google_vla_ext.cpp  h264packetizationhandler.cpp  h264rtpdepacketizer.cpp  h264rtppacketizer.cpp  h265nalunit.cpp  h265packetizationhandler.cpp  h265rtpdepacketizer.cpp  h265rtppacketizer.cpp  iceconfiguration.cpp  iceconfiguration.hpp  icetransport.cpp  icetransport.hpp  iceudpmuxlistener.cpp  include.hpp  (+65 more)
test/: benchmark.cpp  capi.cpp  capi_connectivity.cpp  capi_track.cpp  capi_websocketserver.cpp  connectivity.cpp  description.cpp  dtls.cpp  fir.cpp  ice_recv_uaf.cpp  main.cpp  negotiated.cpp  reliability.cpp  rtcp_app.cpp  rtx.cpp  sctp_interleaving.cpp  simulcast_sdp.cpp  simulcast_sdp_generation.cpp  simulcast_sdp_parsing.cpp  test.hpp  track.cpp  turn_connectivity.cpp  turn_tcp_connectivity.cpp  video_layers_allocation.cpp  websocket.cpp  websocketserver.cpp
web-client/: answerScript.js  answerer.html  index.html  script.js  server.js  style.css
webrtc_server/: Cargo.toml
webrtc_server/src/: main.rs
(+197 files in other folders)
